--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         }
 
         .tracklist.open {
-            max-height: 1500px;  /* Максимальная высота, изменяй по необходимости */
+            max-height: 1000px;  /* Максимальная высота, изменяй по необходимости */
             height: auto;
         }
 
@@ -306,11 +306,9 @@
     const modalClose = document.getElementById("modal-close");
     const cursor = document.getElementById("cursor");
     const openSound = document.getElementById("open-sound");
-
     let open = false;
-    let modalShown = false;  // Слежение за состоянием модального окна
+    let modalShown = false;
 
-    // Клик на альбом
     album.addEventListener("click", () => {
         open = !open;
         if (open) {
@@ -326,30 +324,24 @@
         }
     });
 
-    // Закрытие модального окна
     modalClose.addEventListener("click", () => {
         modal.style.display = "none";  // Скрыть модальное окно
-        modalShown = false;  // Устанавливаем флаг, чтобы окно не открылось снова
+        modalShown = false;
     });
 
     /* ---------------------- КРЫСЫ ---------------------- */
     function spawnRat() {
         const rat = document.createElement("div");
         rat.classList.add("rat");
-
-        // Случайное положение
         rat.style.left = `${Math.random() * 100}vw`;
         rat.style.bottom = `${Math.random() * 100}vh`;
 
-        // Случайная скорость и направление
-        const speed = Math.random() * 5 + 2;
-
+        // Рандомизация скорости
+        const speed = Math.random() * 3 + 2;
         rat.style.animationDuration = `${speed}s`;
-        rat.style.animationName = `ratMove`;
 
         document.body.appendChild(rat);
 
-        // Удаление крысы через определённое время
         setTimeout(() => {
             rat.remove();
         }, speed * 1000);
