--- a/index.html
+++ b/index.html
@@ -4,383 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Увертюра Иордан — Как будто ты в фонтан упал</title>
-
-    <style>
-        /* ---------------------- ГЛАВНЫЙ СТИЛЬ ---------------------- */
-        body {
-            margin: 0;
-            padding: 0;
-            background: #050509;
-            color: #c5c5c5;
-            font-family: "Arial", sans-serif;
-            overflow-x: hidden;
-            position: relative;
-            cursor: none; /* Убираем стандартный курсор */
-        }
-
-        /* --- МРЯКОТНАЯ ФОНА ТУМАНА --- */
-        .fog {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(circle at 30% 60%, rgba(30, 30, 40, 0.4), transparent 70%),
-                        radial-gradient(circle at 80% 30%, rgba(20, 20, 30, 0.4), transparent 60%);
-            filter: blur(40px);
-            animation: fogMove 20s ease-in-out infinite alternate;
-            z-index: 1;
-        }
-
-        @keyframes fogMove {
-            0% { transform: translate(-20px, -20px); }
-            100% { transform: translate(20px, 20px); }
-        }
-
-        /* ---------------------- МОДАЛЬНОЕ ОКНО ---------------------- */
-        .modal {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: rgba(0, 0, 0, 0.8);
-            padding: 30px;
-            border-radius: 10px;
-            width: 60%;
-            max-width: 500px;
-            color: #fff;
-            font-size: 1.2em;
-            text-align: center;
-            z-index: 10;
-            display: none;  /* Скрыто по умолчанию */
-        }
-
-        /* ---------------------- КНОПКА ЗАКРЫТИЯ ---------------------- */
-        .modal-close {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            font-size: 1.5em;
-            color: #fff;
-            background: transparent;
-            border: none;
-            cursor: pointer;
-        }
-
-        /* ---------------------- ЗАГОЛОВОК ---------------------- */
-        h1 {
-            text-align: center;
-            font-size: 3.5em;
-            margin-top: 40px;
-            position: relative;
-            z-index: 10;
-            letter-spacing: 4px;
-            color: #e8e8e8;
-            text-shadow: 0 0 20px rgba(0, 255, 180, 0.3);
-        }
-
-        /* ---------------------- ОПИСАНИЕ ---------------------- */
-        .description {
-            text-align: center;
-            margin-top: 10px;
-            position: relative;
-            z-index: 10;
-            opacity: 0.8;
-            font-size: 1.1em;
-        }
-
-        /* ---------------------- АЛЬБОМ ---------------------- */
-        .album-container {
-            width: 340px;
-            margin: 60px auto;
-            position: relative;
-            z-index: 5;
-        }
-
-        .album-cover {
-            width: 100%;
-            border: 4px solid #333;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
-            cursor: pointer;
-            transition: transform 0.3s, filter 0.3s;
-        }
-
-        .album-cover:hover {
-            transform: scale(1.05);
-            filter: brightness(1.2);
-        }
-
-        /* ---------------------- ТРЕК-ЛИСТ ---------------------- */
-        .tracklist {
-            max-height: 0;
-            overflow-y: auto;  /* Для прокрутки */
-            transition: max-height 0.5s ease;
-            margin-top: 15px;
-            background: #0c0c0f;
-            border: 1px solid #222;
-            padding: 0 15px;
-            height: 0;
-            overflow: hidden;
-        }
-
-        .tracklist.open {
-            max-height: 1000px;  /* Максимальная высота, изменяй по необходимости */
-            height: auto;
-        }
-
-        .track {
-            padding: 10px 0;
-            border-bottom: 1px solid #1a1a1e;
-        }
-
-        .track:last-child {
-            border-bottom: none;
-        }
-
-        .track-name {
-            margin-bottom: 5px;
-            color: #9dd;
-        }
-
-        audio {
-            width: 100%;
-            margin-bottom: 10px;
-        }
-
-        /* ---------------------- КРЫСЫ ---------------------- */
-        .rat {
-            position: fixed;
-            width: 80px;
-            height: 40px;
-            background: url('images/rat-silhouette.png') center/contain no-repeat;
-            opacity: 0.7;
-            pointer-events: none;
-            z-index: 50;
-            animation: ratMove 5s linear infinite;
-        }
-
-        @keyframes ratMove {
-            0% { transform: translateX(0); }
-            100% { transform: translateX(100vw); }
-        }
-
-        /* ---------------------- ТЕНИ СУЩЕСТВ ---------------------- */
-        .shadow-creature {
-            position: fixed;
-            width: 180px;
-            height: 330px;
-            background: rgba(0, 0, 0, 0.3);
-            filter: blur(25px);
-            pointer-events: none;
-            animation: creep 4s linear forwards;
-            z-index: 4;
-        }
-
-        @keyframes creep {
-            0% { transform: translateX(-200px); opacity: 0; }
-            20% { opacity: 0.4; }
-            80% { opacity: 0.4; }
-            100% { transform: translateX(130vw); opacity: 0; }
-        }
-
-        /* ---------------------- КИСЛОТНЫЙ КУРСОР ---------------------- */
-        .cursor {
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            background: rgba(0, 255, 0, 0.8);
-            border-radius: 50%;
-            pointer-events: none;
-            transition: transform 0.1s ease;
-        }
-
-        .trail {
-            position: absolute;
-            background: rgba(0, 255, 0, 0.5);
-            border-radius: 50%;
-            pointer-events: none;
-            transition: all 1s ease-out;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<div class="fog"></div>
+    <div class="fog"></div>
 
-<h1>Увертюра Иордан</h1>
-<div class="description">Альбом: <b>Как будто ты в фонтан упал</b><br>Жанр: Психоделический рок / регги</div>
+    <h1>Увертюра Иордан</h1>
+    <div class="description">Альбом: <b>Как будто ты в фонтан упал</b><br>Жанр: Психоделический рок / регги</div>
 
-<!-- ------------------- АЛЬБОМ ------------------- -->
-<div class="album-container">
-    <img class="album-cover" id="album" src="images/album1.jpg" alt="Album cover">
-
-    <div class="tracklist" id="tracklist">
-        <div class="track">
-            <div class="track-name">Трек 1 — (название позже)</div>
-            <audio controls src="audio/track1.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 2 — (название позже)</div>
-            <audio controls src="audio/track2.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 3 — (название позже)</div>
-            <audio controls src="audio/track3.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 4 — (название позже)</div>
-            <audio controls src="audio/track4.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 5 — (название позже)</div>
-            <audio controls src="audio/track5.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 6 — (название позже)</div>
-            <audio controls src="audio/track6.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 7 — (название позже)</div>
-            <audio controls src="audio/track7.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 8 — (название позже)</div>
-            <audio controls src="audio/track8.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 9 — (название позже)</div>
-            <audio controls src="audio/track9.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 10 — (название позже)</div>
-            <audio controls src="audio/track10.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 11 — (название позже)</div>
-            <audio controls src="audio/track11.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 12 — (название позже)</div>
-            <audio controls src="audio/track1.mp3"></audio>
-        </div>
-
-        <div class="track">
-            <div class="track-name">Трек 13 — (название позже)</div>
-            <audio controls src="audio/track13.mp3"></audio>
+    <!-- Альбом -->
+    <div class="album-container">
+        <img class="album-cover" id="album" src="images/album1.jpg" alt="Album cover">
+        <div class="tracklist" id="tracklist">
+            <!-- Треки, как в твоём примере -->
+            <div class="track"><div class="track-name">Трек 1 — (название позже)</div><audio controls src="audio/track1.mp3"></audio></div>
+            <!-- Добавь остальные треки аналогично -->
         </div>
     </div>
-</div>
 
-<!-- ------------------- ЗВУК РАСКРЫТИЯ ------------------- -->
-<audio id="open-sound" src="audio/open.mp3" preload="auto"></audio>
+    <!-- Звук раскрытия -->
+    <audio id="open-sound" src="audio/open.mp3" preload="auto"></audio>
 
-<!-- ------------------- МОДАЛЬНОЕ ОКНО ------------------- -->
-<div class="modal" id="modal">
-    <button class="modal-close" id="modal-close">X</button>
-    <p>Ты шагаешь, не замечая, как земля под ногами теряет прочность...</p>
-</div>
+    <!-- Модальное окно -->
+    <div class="modal" id="modal">
+        <button class="modal-close" id="modal-close">X</button>
+        <p>Ты шагаешь, не замечая, как земля под ногами теряет прочность...</p>
+    </div>
 
-<!-- ------------------- РАТЫ И ТЕНИ ------------------- -->
-<div class="rat"></div>
-<div class="shadow-creature"></div>
+    <!-- Раты и тени -->
+    <div class="rat"></div>
+    <div class="shadow-creature"></div>
 
-<!-- ------------------- КИСЛОТНЫЙ КУРСОР ------------------- -->
-<div class="cursor" id="cursor"></div>
+    <!-- Кислотный курсор -->
+    <div class="cursor" id="cursor"></div>
 
-<script>
-    const album = document.getElementById("album");
-    const tracklist = document.getElementById("tracklist");
-    const modal = document.getElementById("modal");
-    const modalClose = document.getElementById("modal-close");
-    const cursor = document.getElementById("cursor");
-    const openSound = document.getElementById("open-sound");
-    let open = false;
-    let modalShown = false;
-
-    album.addEventListener("click", () => {
-        open = !open;
-        if (open) {
-            tracklist.classList.add("open");
-            openSound.play();  // Воспроизводим звук раскрытия
-        } else {
-            tracklist.classList.remove("open");
-        }
-
-        if (!modalShown) {
-            modal.style.display = "flex";  // Показываем модальное окно
-            modalShown = true;
-        }
-    });
-
-    modalClose.addEventListener("click", () => {
-        modal.style.display = "none";  // Скрыть модальное окно
-        modalShown = false;
-    });
-
-    /* ---------------------- КРЫСЫ ---------------------- */
-    function spawnRat() {
-        const rat = document.createElement("div");
-        rat.classList.add("rat");
-        rat.style.left = `${Math.random() * 100}vw`;
-        rat.style.bottom = `${Math.random() * 100}vh`;
-
-        // Рандомизация скорости
-        const speed = Math.random() * 3 + 2;
-        rat.style.animationDuration = `${speed}s`;
-
-        document.body.appendChild(rat);
-
-        setTimeout(() => {
-            rat.remove();
-        }, speed * 1000);
-    }
-
-    setInterval(spawnRat, Math.random() * 1000 + 500);  // Периодичность появления
-
-    /* ---------------------- ТЕНИ СУЩЕСТВ ---------------------- */
-    function spawnCreatureShadow() {
-        const shadow = document.createElement("div");
-        shadow.classList.add("shadow-creature");
-        shadow.style.top = `${Math.random() * 90 + 5}%`;
-        document.body.appendChild(shadow);
-
-        setTimeout(() => {
-            shadow.remove();
-        }, 4000);
-    }
-
-    setInterval(spawnCreatureShadow, 5000);
-
-    /* ---------------------- КИСЛОТНЫЙ КУРСОР ---------------------- */
-    document.addEventListener("mousemove", e => {
-        cursor.style.left = `${e.clientX - 10}px`;  // Центрируем курсор
-        cursor.style.top = `${e.clientY - 10}px`;
-
-        // Частицы
-        for (let i = 0; i < 3; i++) {
-            const trail = document.createElement('div');
-            trail.classList.add('trail');
-            trail.style.left = `${e.clientX + Math.random() * 30 - 15}px`;
-            trail.style.top = `${e.clientY + Math.random() * 30 - 15}px`;
-            trail.style.width = `${10 + Math.random() * 10}px`;
-            trail.style.height = trail.style.width;
-            document.body.appendChild(trail);
-            setTimeout(() => trail.remove(), 1200);
-        }
-    });
-</script>
-
+    <script src="script.js"></script>
 </body>
 </html>
